crates/toml/tests/snapshots/invalid/ext/datetime/minute-too-large.stderr
TOML parse error at line 1, column 21
  |
1 | foo = 1997-09-09T12:69:09.09Z
  |                     ^
invalid date-time
value is out of range
